@@ -1,0 +1,13 @@
+const i = -1;
+catmap (\i/*0:*/ -> catmap (\j/*0:*/ -> [(i/*1:*/,j/*0:*/)] {
+  rule #0: j = [(i,j)]
+  state 0: #0
+	<var> state 1
+  state 1: #0
+}) (3..4) {
+  rule #0: i = catmap (\j -> [(i,j)]) (3..4)
+  state 0: #0
+	<var> state 1
+  state 1: #0
+}) (1..2);
+[(1,3),(1,4),(2,3),(2,4)]
