@@ -1,0 +1,3 @@
+// const name capture regression, reported by Eddie Rucker
+const i = -1;
+[(i,j); i=1..2; j=3..4];
